Añadida la página que muestra los detalles de la skill seleccionada.

--- a/public/html/skillNotebook.html
+++ b/public/html/skillNotebook.html
@@ -1,1 +1,45 @@
 <!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Skill Detail Page</title>
+  <link rel="stylesheet" href="../css/skillNotebookStyle.css">
+</head>
+<body>
+<div class="container">
+  <div class="header">
+    <div class="hexagon"></div>
+    <div>
+      <div class="skill-title">Skill: Light up a LED for the first time</div>
+      <div class="skill-score">Skill Score: 1 points</div>
+    </div>
+  </div>
+  <div class="description">
+    <h3>Description</h3>
+    The quintessential first step in electronics! Learn the basics of circuits and components by lighting up an LED.
+  </div>
+  <div class="tasks">
+    <h3>Tasks to Complete</h3>
+    <ul>
+      <li><input type="checkbox"> Gather necessary components (LED, resistor, battery, wires)</li>
+      <li><input type="checkbox"> Learn about LED polarity and how to identify anode/cathode</li>
+      <li><input type="checkbox"> Calculate appropriate resistor value for your LED and power source</li>
+      <li><input type="checkbox"> Build a simple circuit on a breadboard to light the LED</li>
+      <li><input type="checkbox"> Test the circuit and troubleshoot if needed</li>
+      <li><input type="checkbox"> Experiment with different color LEDs and resistor values</li>
+      <li><input type="checkbox"> Document your steps in a Google Drive doc and share its url as an evidence</li>
+    </ul>
+  </div>
+  <div class="resources">
+    <h3>Resources</h3>
+    <ul>
+      <li><a href="https://learn.sparkfun.com/tutorials/how-to-use-a-breadboard" target="_blank">SparkFun's "How to Use a Breadboard" tutorial</a></li>
+      <li><a href="https://learn.adafruit.com/adafruit-arduino-lesson-2-leds/led-circuits" target="_blank">Adafruit's "LED Circuit" guide</a></li>
+      <li><a href="https://www.allaboutcircuits.com/textbook/semiconductors/chpt-3/light-emitting-diodes-leds/" target="_blank">All About Circuits "Light-Emitting Diodes (LEDs)" lesson</a></li>
+      <li><a href="https://www.youtube.com/watch?v=QzoPxwIM2qE" target="_blank">YouTube video: "How To Light an LED - The Basics" by Paul McWhorter</a></li>
+    </ul>
+  </div>
+</div>
+</body>
+</html>
