Añadida la barra superior en todas las páginas y pequeños arreglos y modificaciones en el código.

--- a/public/html/leaderboard.html
+++ b/public/html/leaderboard.html
@@ -4,92 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Range Explanations</title>
-        <script src="../js/scripts/leaderboard.js"></script>
-        <style>
-            /* General Styles */
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #f7f7f7;
-                color: #333;
-            }
-
-            h1 {
-                font-size: 24px;
-                font-weight: normal;
-                color: #333;
-                margin-bottom: 10px;
-            }
-
-            /* Header and Welcome Banner */
-            #welcomeBanner {
-                background-color: #ffda66;
-                color: #333;
-                padding: 10px;
-                font-size: 16px;
-                text-align: right;
-                font-weight: bold;
-            }
-
-            /* Table Styles */
-            table {
-                width: 100%;
-                border-collapse: collapse;
-                background-color: white;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            }
-
-            th {
-                text-align: left;
-                padding: 10px;
-                background-color: #f0f0f0;
-                color: #333;
-                font-weight: bold;
-                border-bottom: 2px solid #ddd;
-            }
-
-            td {
-                padding: 10px;
-                border-bottom: 1px solid #ddd;
-                text-align: left;
-            }
-
-            /* Badge Column Styling */
-            .badge {
-                display: inline-block;
-                width: 20px;
-                height: 20px;
-                background-color: #ccc;
-                text-align: center;
-                line-height: 20px;
-                border-radius: 4px;
-                font-size: 12px;
-                font-weight: bold;
-                color: #333;
-            }
-
-            /* Add styles for each badge color */
-            .badge-gray { background-color: #ccc; }
-            .badge-yellow { background-color: #ffd700; }
-            .badge-orange { background-color: #ff8c00; }
-
-            /* Customizing Required Bitpoints Column */
-            .bitpoints {
-                font-size: 14px;
-                color: #666;
-            }
-
-            /* Container for main content */
-            .container {
-                max-width: 800px;
-                margin: 20px auto;
-                padding: 20px;
-                background-color: #fff;
-                border-radius: 8px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            }
-        </style>
+        <script src="../js/leaderboard.js"></script>
+        <link rel="stylesheet" href="../css/leaderboard.css">
     </head>
     <body>
+        <div class="user-bar"> Hello admin! | <a href="/">Electronics Skill Tree</a></div>
         <h1>Range Explanations</h1>
         <table id="range">
             <thead>
