Añadido admin dashboard

--- a/public/html/skillNotebook.html
+++ b/public/html/skillNotebook.html
@@ -10,27 +10,17 @@
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-<div class="user-bar"> Hello admin! | <a href="leaderboard.html">Leaderboard</a> | <a href="/">Electronics Skill Tree</a></div>
 <div class="container">
   <div class="header">
+    <div class="hexagon">
+      <svg width="50" height="50" viewBox="0 0 50 50">
+        <polygon points="25,2.5 47.5,13.75 47.5,36.25 25,47.5 2.5,36.25 2.5,13.75"></polygon>
+      </svg>
+    </div>
     <div>
       <div class="skill-title">Skill: Light up a LED for the first time</div>
       <div class="skill-score">Skill Score: 1 points</div>
     </div>
-  </div>
-  <div class="svg-wrapper" data-id="1" data-custom="false">
-    <svg width="100" height="100" viewBox="0 0 100 100">
-      <polygon points="50,5 95,27.5 95,72.5 50,95 5,72.5 5,27.5"
-               class="hexagon"/>
-      <text x="50%" y="20%" text-anchor="middle" fill="black" font-
-            size="10">
-        <tspan x="50%" dy="1.2em" font-weight="bold">Light up an</tspan>
-        <tspan x="50%" dy="1.2em" font-weight="bold">LED for the
-          first </tspan>
-        <tspan x="50%" dy="1.2em" font-weight="bold">time</tspan>
-      </text>
-      <image x="35%" y="60%" width="30" height="30" href="../electronics/icons/icon1.svg"/>
-    </svg>
   </div>
   <div class="description">
     <h3>Description</h3>
